--- a/packages/mantine-corporate/src/templates/ObjectFieldTemplate.module.css
+++ b/packages/mantine-corporate/src/templates/ObjectFieldTemplate.module.css
@@ -10,16 +10,39 @@
   }
 }
 .root {
-  border-radius: 4px;
-  padding: 4px;
-  margin:4px 0;
+  border-radius: 8px;
+  padding: 8px;
+  user-select: none;
   
+  border: 1px solid transparent;
+
+  & :global(.armt-template-objectfield-item) {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  & .root {
+
+     border-color: var(--mantine-color-gray-3);
+     box-shadow: var(--mantine-shadow-md);
+     & .root:not(:focus-within) {
+      border-color: transparent;
+      box-shadow: none;
+     }
+  }
 
   background-color: #fff;
 
-  transition: background-color 200ms ease;
+  transition: background-color 200ms ease, margin 200ms ease, box-shadow 200ms ease;
 
   &:has(> .collapse[aria-hidden="true"]) {
     background-color: #f2f2f2;
+    border: none;
+    box-shadow: none;
+    margin-top: -.3rem;
+    margin-bottom: -.3rem;
+    &.error {
+      border: var(--mantine-color-red-6) 1px solid !important;
+    }
   }
 }
